--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -109,7 +109,7 @@
 
 
 <!-- this is login modal -->
-<div style="background-color: transparent;" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
+<div style="background-color: transparent;"  data-backdrop="static" class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"  *ngIf="loginModalHidden">
   <div class="modal-dialog" style="width: 390px;" >
     <div class="modal-content">
         <div class="modal-header" id="sign_in_modal">
@@ -149,7 +149,7 @@
 
 
 <!-- this is signup modal -->
-<div style="background-color: transparent;" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+<div style="background-color: transparent;" data-backdrop="static" class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
   <div class="modal-dialog" style="width: 420px;" id="sign_up_modal">
     <div class="modal-content">
         <div class="modal-header">
