--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -12,6 +12,7 @@
 		
 			<div id="content" role="main" class="col-md-12 col-sm-12 columns">
 			  <h1 class="loop-title org_btn">Organization <a class="btn btn-warning pull-right" href="" [routerLink]="['/organization-add']">Add Organization</a></h1>
+			  <h4 style="text-align: center;">{{showData}}</h4>
 				<div class="form-group organization_div row"  *ngFor = "let org of organizationArr | paginate: { id: 'server',  itemsPerPage: per_page, currentPage: currentPage, totalItems: Total}">
 
 					
@@ -50,7 +51,7 @@
 				</div>
 
 
-				<div class="has-text-centered" style="text-align: center;">
+				<div *ngIf="!showData" class="has-text-centered" style="text-align: center;">
 				<pagination-controls  (pageChange)="getOrganizationPagination($event)" id="server"></pagination-controls>
 			</div>
 
