--- a/src/app/view/event/eventlist.component.html
+++ b/src/app/view/event/eventlist.component.html
@@ -134,6 +134,7 @@
 
 
                 <section *ngIf="!gridview" id="loop_listing_taxonomy" class="widget_loop_taxonomy_wrap  list">
+                <h4 style="text-align: center;">{{showData}}</h4>
                                     <!-- inside loop div start -->
                                          <article class="post" *ngFor = "let events of eventArr | paginate: { id: 'server',  itemsPerPage: per_page, currentPage: currentPage, totalItems: total}">
                                         <div class="listing_img">
@@ -239,7 +240,7 @@
                                     
                                 </section>
                    
-                                <div class="has-text-centered" style="text-align: center;">
+                                <div *ngIf="!showData" class="has-text-centered" style="text-align: center;">
                                     <pagination-controls  (pageChange)="getEventPagination($event)" id="server"></pagination-controls>
                                 </div>
                 <!-- div class="postpagination_776778595 postpagination clearfix">
