--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -4,10 +4,12 @@
         <div class="widget-wrap widget-inside">
             <div class="search_nearby_widget what_fld_search">
                 <!--<div class="title-subtitle">Create an Events Portal easily using this theme.<span> Search through 1500 events</span></div>-->            
-                <form name="searchform_1748020477" method="get" class="searchform_1748020477 allinone" id="searchform" action="#" style="position:relative;">
-                    <input value="" name="s" id="search_near-557435365" class="searchpost placeholder" placeholder="What do you want to do today?" size="100" type="text" #search_text>
+                <form #searchForm="ngForm" (ngSubmit)="search_index(searchForm.value)" id="searchform" class="searchform_1748020477 allinone" style="position:relative;">
+                                           <input type="text" value="" name="search" id="search_near-550" class="searchpost placeholder" placeholder="Looking For ..." size="100" ngModel>
 
-                    <input class="sgo" value="Search" type="submit" (click)="search(search_text.value)">
+                        
+                      
+                        <input class="sgo" value="Search" type="submit">
                 </form>
             </div>
         </div>
@@ -412,9 +414,22 @@
                     </div>
                 </div>
             </div>
+            <div id="templatic_text-1" class="widget templatic_text" style="margin-top: 362px;">
+                <div class="widget-wrap widget-inside m-t-20">      
+                    <div class="textwidget text-center"> 
+                        <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=home-300x600"></iframe>                 
+                        <!--<a href="">
+
+
+                            <img src="app/assets/images/ads images/300x600.jpg">
+
+                        </a> -->   
+                    </div>
+                </div>
+            </div>
 
             <!-- Group list -->
-            <div id="templatic_popular_post_technews-3" class="widget widget-twocolumn popular_posts">
+            <!-- <div id="templatic_popular_post_technews-3" class="widget widget-twocolumn popular_posts">
                 <div class="widget-wrap widget-inside">
                     <h3 class="widget-title">Group List</h3>
                     <ul class="listingview clearfix list" id="list_168817222">
@@ -567,10 +582,10 @@
                         </li>
                     </ul>
                 </div>
-            </div>  
+            </div>   -->
 
             <!-- Organization list -->
-            <div id="templatic_popular_post_technews-3" class="widget widget-twocolumn popular_posts">
+           <!--  <div id="templatic_popular_post_technews-3" class="widget widget-twocolumn popular_posts">
                 <div class="widget-wrap widget-inside">
                     <h3 class="widget-title">Organization List</h3>
                     <ul class="listingview clearfix list" id="list_168817222">
@@ -723,11 +738,12 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
 
 
         </aside>
+
     </div>
     <!-- .wrap -->
 </section>
