--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -100,9 +100,10 @@
                                             <li class="" *ngFor = "let submenu of menuArr; let index = index" (click)="submenuClick(submenu.category_name,index)"><a>{{submenu.category_name}}</a></li>
                                         </ul>
                                     </li>
-                                    <li class=""><a href="" [routerLink]="['/blog']" > Blog</a></li>
-                                    <li class=""><a href="" [routerLink]="['/sponsors']">Sponsors</a></li>
-                                    <li class=""><a href="" [routerLink]="['/contactus']">Contact Us</a></li>
+                                    <li class=""><a href="" [routerLink]="['/blog']" > Blog</a></li><!-- 
+                                    <li class=""><a href="" [routerLink]="['/sponsors']">Sponsors</a></li> -->
+                                         <li class=""><a href="javascript:void(0)">Sponsors</a></li>
+                                    <!-- <li class=""><a href="" [routerLink]="['/contactus']">Contact Us</a></li> -->
                                     <li data-toggle="modal" data-target="#loginModal" class="tmpl-login" *ngIf = "!getToken"><a>Sign In</a></li>
                                     <!--<li class="tmpl-login"><a href="">Logout</a></li>-->
                                     <li id="signUpFormModal" data-toggle="modal" data-target="#signupModal" class="tmpl-login" *ngIf = "!getToken"><a>Sign Up</a></li>
