--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -138,7 +138,8 @@
 
                 <div class="form_row " >
                     <button id="login-submit" class="btn btn-info" type="submit" aria-hidden="true"> Sign In</button>
-                    <p class="forgot_link">New User? <a data-toggle="modal" data-target="#signupModal" class="logreg-link" id="tmpl-reg-link" (click)="signupClick()">Sign Up</a></p>
+                    <p class="forgot_link">New User? <!--<a data-toggle="modal" data-target="#signupModal" class="logreg-link" id="tmpl-reg-link" (click)="signupClick()">Sign Up</a>-->
+                        <a class="logreg-link" id="tmpl-reg-link" (click)="signupClick()">Sign Up</a></p>
                 </div> 
 
                 </form>
@@ -224,7 +225,8 @@
                 <button (click)="closeModal()" class="btn btn-info" type="reset" value="Save" name="submit" data-dismiss="modal">Cancel</button>
             </form>
         </div>
-             <p style="margin-left: 15px;">Already have an account? <a data-toggle="modal" data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>  
+             <p style="margin-left: 15px;">Already have an account? <!--<a data-toggle="modal" data-target="#loginModal" id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a>-->
+                <a id="tmpl-back-login" class="widgets-link" (click)="siginClick()">Sign in</a></p>  
         </div>
     </div>
 </div>
