--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -65,8 +65,8 @@
                             <!-- #sidebar-header right end -->
                         </div>
                     </div> <!-- large-8 columns -->  
-                    <div class="location_fld_wrapper">
-                        <!-- City name link -->
+                    <!-- <div class="location_fld_wrapper"> -->
+                   <!--    
                         <div id="loc_city_link" class="toggle_handler primary_location" data-location="location_aslink">
                             <a id="directorytab"  class=""><img src="app/assets/images/flags/us.png" width="18" height="12" alt="New York"> New York<i class="fa fa-angle-down"></i></a>
                         </div>
@@ -84,7 +84,7 @@
                                 <div id="location_loading" style="display: none;"><i class="fa fa-circle-o-notch fa-spin"></i></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Primary Navigation Menu Start -->
                     <div id="menu-primary" class="menu-container">
                         <nav role="navigation" class="wrap">
